--- a/default.css
+++ b/default.css
@@ -287,6 +287,20 @@ h6 { font-size: 16px;}
 	background-color: var(--buttonColor);
 	border:none;
 }
+.project-container {
+    display: flex;
+    justify-content: space-between; /* Adjust as needed */
+    flex-wrap: wrap;
+}
+
+.project {
+    width: 48%; /* Adjust width as needed */
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 @media screen and (max-width: 1200px){
 	.main-container{
 		width: 95%;
